# vektor

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  build_log.txt  changes.txt  code.py  game_engine_map.md  imgui.ini  plan.md  project_1.vproj  pylanceconfig.json  sample.vproj  test.h  tmp.clang-format
cmake/: UseCxxBridge.cmake
compute/: Cargo.toml
compute/intern/: Cargo.toml  build.rs
compute/math_accel/: Cargo.toml
intern/: CMakeLists.txt
intern/atomic/: CMakeLists.txt
intern/clog/: CLG_log.cc  CLG_log.h  CMakeLists.txt  COG_log.hh  clog.cc
intern/clog/intern/: CLG_init.cc  CLG_init.hh
intern/config/: CMakeLists.txt  CONFIG_manager.h  CONFIG_parser.h
intern/cycles/: CMakeLists.txt
intern/file_system/: CMakeLists.txt  FileSystem.cc  FileSystem.hh  fileops.cc  (+2 more)
intern/qt/: CMakeLists.txt
intern/qt/dock/: CMakeLists.txt
intern/qt/dock/assets_browser/: CMakeLists.txt  WIDGET_assets_browser.h
intern/qt/dock/assets_browser/intern/: WIDGET_assets_browser.cc
intern/qt/dock/common/: CMakeLists.txt  WIDGET_area.cc  WIDGET_area.h  WIDGET_header.cc  WIDGET_header.h
intern/qt/dock/common/intern/: WIDGET_area.cc  WIDGET_header.cc
intern/qt/dock/console/: CMakeLists.txt  WIDGET_console.h
intern/qt/dock/console/intern/: WIDGET_console.cc
intern/qt/dock/outliner/: CMakeLists.txt  WIDGET_outliner.h  WIDGET_outliner.hh
intern/qt/dock/outliner/intern/: WIDGET_outliner.cc
intern/qt/dock/properties/: CMakeLists.txt  PRP_subpanel.hh  WIDGET_properties.h
intern/qt/dock/properties/intern/: PRP_camera.cc  PRP_camera.hh  PRP_drag_spinbox.cc  PRP_drag_spinbox.hh  PRP_light.cc  PRP_light.hh  PRP_transform.cc  PRP_transform.hh  WIDGET_properties.cc  WIDGET_properties.hh
intern/qt/dock/scene/: CMakeLists.txt  SCN_notifier.h  SCN_setup.h  WIDGET_view_port.h  WIDGET_viewport.h
intern/qt/dock/scene/intern/: SCN_notifier.cc  SCN_setup.cc  WIDGET_view_port.cc  WIDGET_viewport.cc  WIDGET_viewport.mm
intern/qt/menu/: CMakeLists.txt  MENU_setup.h
intern/qt/menu/edit/: CMakeLists.txt  edit.cc  edit.hh
intern/qt/menu/file/: CMakeLists.txt  file.cc  file.hh
intern/qt/menu/intern/: MENU_setup.cc
intern/qt/menu/window/: CMakeLists.txt  window.cc  window.hh
intern/qt/ui/: CMakeLists.txt  UI_style_manager.cc  UI_style_manager.h
intern/vpi/: CMakeLists.txt  VPI_IContext.h  VPI_IEvent.h  VPI_IEventConsumer.h  VPI_ISystem.h  VPI_IWindow.h  VPI_Rect.h  VPI_Types.h
intern/vpi/intern/: VPI_Context.hh  VPI_ContextGL.cc  VPI_ContextGL.hh  VPI_ContextMTL.hh  VPI_ContextMTL.mm  VPI_Event.cc  VPI_Event.hh  VPI_EventManager.cc  VPI_EventManager.hh  VPI_GLWidget.cc  VPI_GLWidget.hh  VPI_QtEventConsumer.cc  VPI_QtEventConsumer.hh  VPI_QtWindow.cc  VPI_QtWindow.hh  VPI_System.cc  VPI_System.hh  VPI_Window.cc  VPI_Window.hh  VPI_WindowManager.cc  VPI_WindowManager.hh
scripts/: count_loc.py  remove_comments.py
source/: vektor_config.h.in  vektor_version.h.in
source/creator/: CMakeLists.txt  build_info.c  creator.cc  creator_args.cc  creator_args.h  creator_args.hh  creator_global.cc  creator_global.h  creator_global.hh  creator_intern.h  creator_intern.hh  creator_signals.cc  test_args.cc
source/editor/windowmanager/: CMakeLists.txt  wm_event_types.h  wm_types.h  wm_window.hh
source/editor/windowmanager/intern/: wm_init_exit.cc  wm_init_exit.hh  wm_window.cc
source/runtime/dna/: CMakeLists.txt  DNA_camera.h  DNA_camera_types.h  DNA_defs.h  DNA_genfile.cc  DNA_genfile.h  DNA_id.h  DNA_id_enum.h  DNA_light.h  DNA_linkbase.h  DNA_listBase.h  DNA_material_types.h  DNA_mesh_types.h  DNA_object_type.h  DNA_scene_types.h  DNA_screen_types.h  DNA_space_enums.h  DNA_space_types.h  DNA_uniform.h  DNA_vec_types.h  DNA_vertex_.h  DNA_view2d_types.h  DNA_viewport_defs.h  DNA_windowmanager_enums.h  DNA_windowmanager_types.h  DNA_workspace_types.h
source/runtime/dna/intern/: DNA_genfile.cc  DNA_utils.cc
source/runtime/gpu/: CMakeLists.txt  GPU_context.h  GPU_framebuffer.h  GPU_mesh.h  GPU_shader.h  GPU_texture.h  GPU_vertex_buffer.hh  GPU_worker.h
source/runtime/gpu/intern/: GPU_context.cc  GPU_framebuffer.cc  GPU_mesh.mm  GPU_shader.cc  GPU_shader_metal.mm  GPU_texture.mm  GPU_vertex_buffer.cc  GPU_worker.cc
source/runtime/gpu/opengl/: GPU_slang.h
source/runtime/gpu/opengl/intern/: GPU_slang.cc
source/runtime/gpu/shaders/: CMakeLists.txt  SHDR_base.h  SHDR_grid.h  SHDR_outline.h  grid.frag  grid.frag.slang  grid.frag.slang.glsl  grid.metal  grid.vert  grid.vert.slang  grid.vert.slang.glsl
source/runtime/gpu/shaders/core/cylinder/: cylinder.frag  cylinder.metal  cylinder.vert
source/runtime/gpu/shaders/core/grid/: grid.frag  grid.metal
source/runtime/gpu/shaders/core/outline/: outline.frag  outline.metal  outline.vert
source/runtime/gpu/shaders/core/program/: program.frag  program.metal  program.vert
source/runtime/gpu/shaders/core/shadow/: shadow.frag  shadow.metal  shadow.vert
source/runtime/gpu/shaders/file/mesh/cylinder/: cylinder.metal
source/runtime/gpu/shaders/intern/: SHDR_grid_impl.mm  SHDR_outline_impl.mm  SHDR_slang.cc
source/runtime/kernel/ecs/: CMakeLists.txt  ECS_mesh_primitives.h  ECS_registry.h  Entity.h
source/runtime/kernel/ecs/intern/: ECS_mesh_primitives.cc  ECS_registry.cc  Entity.cc
source/runtime/lib/: CMakeLists.txt  VLI_complier_attrs.h  VLI_math_geom.cc  VLI_math_geom.hh  VLI_threads.h
source/runtime/lib/intern/: appdir.cc  appdir.h  context.hh
source/runtime/loader/: CMakeLists.txt  VLO_readfile.h  VLO_readfile.hh  readfile.cc  versioning.h  versioning.mm
source/runtime/mesh/: CMakeLists.txt  mesh.cc  mesh.h
source/runtime/mesh/intern/: editmesh_add.hh
source/runtime/rna/: CMakeLists.txt  RNA_access.h  RNA_camera.h  RNA_define.h  RNA_ecs_bridge.h  RNA_ecs_registry.h  RNA_internal.h  RNA_internal_types.h  RNA_light.h  RNA_object.h  RNA_types.h  rna_access.cc  rna_aceess.h
source/runtime/rna/intern/: RNA_camera.cc  RNA_define.cc  RNA_ecs_registry.cc  RNA_light.cc  RNA_objects.cc
source/tests/: CMakeLists.txt  tests_main.cc  vpi_event_test.cc
(+193 files in other folders)
